  EntityConnectionServer now handles Throwable on startup and exits gracefully
  Entity.Definition.hasLinkedProperties() added
  DefualtEntity.handleValueChangedEventInitialized() skips linking values if no linked properties exist
  DefaultProperty.isDouble() result is cached, very frequently used
  DefaultValueMap, minor refactoring
  DefaultEntityEditModel.prepareNewValue() removed
  DefaultEntityComboBoxModel.translateSelectionItem() finalized
  Configuration.PROPERTY_DEBUG_OUTPUT removed
  DefaultEntityEditModel no longer provides property debug output
  EntityTablePanel.initialize() and setupControls() removed (setupControlsInternal then renamed to setupControls)
  Fixed a couple of Sonar issues
  SteppedComboBox unused constructor removed
  run_entity_generator target added to build.xml
  EntityGeneratorModel, bug fixed, multiple entity definition output was wrong
  EntityUiUtil.selectEntities() moved to EntityTablePanel, createLookupFieldPanel() removed, initializeViewImageAction() moved to EntityTablePanel, renamed getViewImageControl(), createNewEntityAction() moved to EntityEditPanel, createEntityComboBoxPanel() and createEntityLookupFieldPanel() removed and createEastButtonPanel() made public
  EntityEditPanel.createNewEntityAction() renamed to createEditPanelAction()
  ConnectionPools, removed illegal depenedency on Configuration, functionality moved to EntityConnectionServer
  FrameworkMessages, Messages cleanup of unused strings
  Column.getSelectIndex() moved to Property.ColumnProperty
  Minor cleanup, removed unused methods
  Mess fixed, parameterless constructors re-added to Database implementations
  AbstractTableColumnSyncPanel constructor now takes FilteredTableColumnModel as parameter
  Javadoc errors and warnings fixed
  DefaultEntityConnectionServerAdmin no longer sets the RMISecurityManager (deprecated)
  ivy.xml, redundant transitive="false" removed from dependencies